# Bevy-ESP32

./: .gitignore  Cargo.toml  export.sh  partitions.csv
.cargo/: config.toml
resources/: empty.tga  gears.tga  puppies.tga
src/: app_state.rs  components.rs  events.rs  lfs_flash.rs  main.rs  messages.rs  plugins.rs  resources.rs  rotary_encoder.rs  sprite_buffer.rs  storage.rs  systems.rs
src/components/: main_menu.rs  menu.rs  menu_icon.rs  menu_item.rs  menu_item_of.rs  menu_items.rs  mod.rs  settings_menu.rs
src/events/: rotary_encoder_button_pressed_event.rs  rotary_encoder_rotated_event.rs
src/messages/: rotary_encoder_button_pressed.rs  rotary_encoder_moved.rs
src/observers/: menu.rs
src/observers/menu/: on_rotary_encoder_button_pushed.rs  on_rotary_encoder_rotated.rs
src/plugins/: main_menu.rs  settings_menu.rs
src/resources/: display.rs  filesystem.rs  framebuffer.rs  mod.rs  navigation_stack.rs
src/systems/: cleanup_main_menu.rs  cleanup_settings_menu.rs  clear_frame_buffer.rs  draw_main_menu.rs  draw_menu.rs  draw_puppies.rs  get_input.rs  main_menu_setup.rs  mod.rs  process_input.rs  process_main_menu_input.rs  process_menu_input.rs  render.rs  setup.rs  setup_app.rs  setup_main_menu.rs  setup_settings_menu.rs  update_display.rs
